@@ -1,3 +1,13 @@
+Wed Dec  3 14:37:41 2003  Dale Wilson  <wilson_d@ociweb.com>
+
+        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.h:
+        * orbsvcs/FT_ReplicationManager/FT_ReplicationManagerFaultAnalyzer.cpp:
+          Fix fuzz from last checkin.
+
+        * orbsvcs/orbsvcs/FT_CORBA.idl:
+          Revert to the version with typedefs importing PortableGroup symbols into FT.
+          This avoids problems during the merge into the main branch.
+
 Wed Dec  3 14:08:12 2003  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/orbsvcs/PortableGroup/PG_Properties_Decoder.h:
